adding modified U4 and test U (no t0)

--- a/07.18.24_final_asym_test2.ipynb
+++ b/07.18.24_final_asym_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "fdf4de45",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "817cb992",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "893d82da",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "35037682",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "4fcb8504",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2f993263",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "55c7e817",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8992\n",
       "8992\n",
       "\n",
       "24\n",
@@ -449,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "41a4e509",
    "metadata": {},
    "outputs": [
@@ -464,8 +463,8 @@
       " -0.00013517 -0.00013475 -0.00013468 -0.00013468]\n",
       "330\n",
       "0\n",
-      "0.12304105460922654\n",
-      "0.12304105460922662\n"
+      "0.1230410546092263\n",
+      "0.1230410546092262\n"
      ]
     }
    ],
@@ -512,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "af07a54e",
    "metadata": {},
    "outputs": [],
@@ -520,12 +519,12 @@
     "# legend = []\n",
     "%matplotlib qt\n",
     "\n",
-    "# plt.plot(xs_cut, NaI_asyms[21] , label='NaI D1')\n",
+    "plt.plot(xs_cut, NaI_asyms[20] , label='NaI D1')\n",
     "# plt.plot(xs_cut, ch_asyms[2] , label='NaI D1')\n",
     "# plt.plot(xs_cut, All_NaI_asyms/24, label='All NaI')\n",
     "# plt.plot(d, b/24, label='All NaI')\n",
     "\n",
-    "plt.plot(xs_cut, All_Li6_asyms , label='6Li')\n",
+    "# plt.plot(xs_cut, All_Li6_asyms , label='6Li')\n",
     "# plt.plot(xs_cut, All_Li6_asyms/4275 , label='6Li')\n",
     "# plt.plot(d, b, label='6Li')\n",
     "\n",
@@ -550,7 +549,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
+   "id": "b03cf3c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F:\\LANL/processed_data/runs12034-12363/asym_D/12034_asym_D.npy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6caa392f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "8992\n"
+     ]
+    }
+   ],
+   "source": [
+    "testload0 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][0])\n",
+    "testload1 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][0])\n",
+    "testload2 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][2])\n",
+    "testload3 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][3])\n",
+    "testload4 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][4])\n",
+    "testload5 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][5])\n",
+    "testload6 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][6])\n",
+    "testload7 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][7])\n",
+    "testload8 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][8])\n",
+    "testload9 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][9])\n",
+    "testload10 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][10])\n",
+    "testload11 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][11])\n",
+    "testload12 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][12])\n",
+    "testload13 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][13])\n",
+    "testload14 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][14])\n",
+    "testload15 = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][15])\n",
+    "testloads = [testload1, testload2, testload3, testload4, testload5, testload6, testload7, testload8, testload9, testload10, testload11, testload12, testload13, testload14, testload15, testload0]\n",
+    "\n",
+    "print(len(testload0))\n",
+    "print(len(testload0[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "eb1488d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "alltests = np.sum(testloads, axis =0)\n",
+    "print(len(alltests))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "5bd1bd68",
    "metadata": {},
    "outputs": [],
@@ -558,9 +632,15 @@
     "# legend = []\n",
     "%matplotlib qt\n",
     "\n",
+    "plt.plot(xs_cut, alltests[0] , label='alltests')\n",
+    "plt.plot(xs_cut, testload1[1] , label='testload1')\n",
     "# plt.plot(xs_cut, NaI_asyms[0] , label='NaI D1')\n",
+    "# plt.plot(xs_cut, NaI_asyms[5] , label='NaI D1')\n",
+    "# plt.plot(xs_cut, NaI_asyms[19] , label='NaI D1')\n",
+    "# plt.plot(xs_cut, NaI_asyms[21] , label='NaI D1')\n",
+    "\n",
     "# plt.plot(xs_cut, ch_asyms[2] , label='NaI D1')\n",
-    "plt.plot(xs_cut, All_NaI_asyms/24, label='All NaI')\n",
+    "# plt.plot(xs_cut, All_NaI_asyms/24, label='All NaI')\n",
     "# plt.plot(d, b/24, label='All NaI')\n",
     "\n",
     "# plt.plot(xs_cut, All_Li6_asyms , label='6Li')\n",
@@ -572,7 +652,7 @@
     "plt.xlabel(\"time from trigger (ns)\")\n",
     "plt.ylabel(\"ADC\")\n",
     "\n",
-    "plt.ylim(-1.5,1.5)\n",
+    "plt.ylim(-3,3)\n",
     "plt.xlim(xs_cut[1800],xs_cut[-1])\n",
     "\n",
     "# plt.axvline(xs[0][baseL], ls = '--')\n",
