updated files asymU/D6 08.12.24

--- a/07.18.24_final_asym_test2.ipynb
+++ b/07.18.24_final_asym_test2.ipynb
@@ -10,13 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['La_sample', '_temp_xs.npy', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs88888-99999', 'testother', 'testother2']\n",
+      "['La_sample', '_temp_xs.npy', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs88888-99999', 'testother', 'testother2', 'xs_uncut.npy']\n",
       "runs12034-12363\n",
       "5\n",
       "5\n",
       "1\n",
       "13\n",
-      "8992\n",
+      "9000\n",
       "330\n",
       "330\n",
       "330\n"
@@ -51,8 +51,8 @@
     "print(end_i)\n",
     "print(len(search_arr[start_i:end_i+1]))\n",
     "\n",
-    "firstfile = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D/'))[0]\n",
-    "arr_sizer = np.load(root+processedfolder+folders_start+'/asym_D/'+firstfile)\n",
+    "firstfile = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D_not0/'))[0]\n",
+    "arr_sizer = np.load(root+processedfolder+folders_start+'/asym_D_not0/'+firstfile)\n",
     "# print(arr_sizer)\n",
     "print(len(arr_sizer))\n",
     "print(len(arr_sizer[0]))\n",
@@ -63,8 +63,8 @@
     "#     runslist_D[f] = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D'))\n",
     "#     runslist_U[f] = sorted(os.listdir(root+processedfolder+folders_start+'/asym_U'))\n",
     "\n",
-    "runslist_D = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D')) ## has to be changed to an array\n",
-    "runslist_U = sorted(os.listdir(root+processedfolder+folders_start+'/asym_U'))\n",
+    "runslist_D = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D_not0')) ## has to be changed to an array\n",
+    "runslist_U = sorted(os.listdir(root+processedfolder+folders_start+'/asym_U_not0'))\n",
     "\n",
     "numruns = len(runslist_U) ## this also has to be changed to an array\n",
     "print(numruns)\n",
@@ -118,7 +118,7 @@
      "text": [
       "330\n",
       "13\n",
-      "8992\n"
+      "9000\n"
      ]
     }
    ],
@@ -140,13 +140,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "F:\\LANL/processed_data/runs12034-12363/asym_D_not0/12034_asym_D.npy\n",
       "13\n",
-      "8992\n"
+      "9000\n",
+      "[ 0.00133901 -0.01026569 -0.02456402  0.02256841  0.02206603 -0.02736907\n",
+      " -0.00754862  0.01507347  0.01083589 -0.0029482 ]\n",
+      "[ 0.00133901 -0.01026569 -0.02456402  0.02256841  0.02206603 -0.02736907\n",
+      " -0.00754862  0.01507347  0.01083589 -0.0029482 ]\n"
      ]
     }
    ],
    "source": [
-    "testload = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][-1])\n",
+    "testload = np.load(root+processedfolder+folders_start+'/asym_D_not0/'+runslist_D[:][0])\n",
+    "print(root+processedfolder+folders_start+'/asym_D_not0/'+runslist_D[:][0])\n",
     "# print(testload)\n",
     "# print(len(testload))\n",
     "# print(len(testload[-1]))\n",
@@ -154,7 +160,9 @@
     "print(len(testload))\n",
     "print(len(testload[0]))\n",
     "# print(len(testload[0][0]))\n",
-    "# print(len(testload[0][0][0]))"
+    "# print(len(testload[0][0][0]))\n",
+    "print((testload[0][7995:8005]))\n",
+    "print((testload[0][7995:8005]))"
    ]
   },
   {
@@ -256,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4fcb8504",
    "metadata": {},
    "outputs": [
@@ -266,30 +274,30 @@
      "text": [
       "330\n",
       "12\n",
-      "8992\n",
+      "9000\n",
       "330\n",
       "13\n",
-      "8992\n",
+      "9000\n",
       "330\n",
       "25\n",
-      "8992\n",
+      "9000\n",
       "25\n",
       "330\n",
-      "8992\n",
-      "[ 0.11499997 -0.38350513  0.28729177  0.35377263 -0.65735913]\n",
-      "[ 0.11499997 -0.38350513  0.28729177  0.35377263 -0.65735913]\n",
-      "[-0.33600956  0.04435089  0.1021454   0.30361845  0.02472155]\n",
+      "9000\n",
+      "[0. 0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0. 0.]\n",
+      "[ 0.3597302  -1.52058834  0.71034006 -0.54548505 10.57092632]\n",
       "\n",
-      "[-0.02933698 -0.00397697 -0.03247103  0.04441356  0.00473019]\n",
-      "[-0.02933698 -0.00397697 -0.03247103  0.04441356  0.00473019]\n",
+      "[-0.01870986 -0.01122627 -0.01887308 -0.07985227  0.03048699]\n",
+      "[-0.01870986 -0.01122627 -0.01887308 -0.07985227  0.03048699]\n",
       "\n",
-      "[-0.33600956  0.04435089  0.1021454   0.30361845  0.02472155]\n",
-      "[-0.33600956  0.04435089  0.1021454   0.30361845  0.02472155]\n",
-      "[ 0.00325701 -0.02898409  0.55704059  0.47575034 -0.16387602]\n",
-      "[ 0.00325701 -0.02898409  0.55704059  0.47575034 -0.16387602]\n",
+      "[ 0.3597302  -1.52058834  0.71034006 -0.54548505 10.57092632]\n",
+      "[ 0.3597302  -1.52058834  0.71034006 -0.54548505 10.57092632]\n",
+      "[0. 0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0. 0.]\n",
       "\n",
-      "[-0.02933698 -0.00397697 -0.03247103  0.04441356  0.00473019]\n",
-      "[0.10692732 0.05989604 0.15149856 0.06152478 0.04057594]\n"
+      "[-0.01870986 -0.01122627 -0.01887308 -0.07985227  0.03048699]\n",
+      "[ 0.11629252  0.27229289  0.31511935 -0.43666285  0.19295632]\n"
      ]
     }
    ],
@@ -304,8 +312,8 @@
     "\n",
     "for i in range(numruns):\n",
     "    run_asyms_D[i] = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[i])\n",
-    "    run_asyms_U[i] = np.load(root+processedfolder+folders_start+'/asym_U/'+runslist_U[i])\n",
-    "    run_asyms_U_noLi[i] = run_asyms_U[i,:-1].copy()\n",
+    "#     run_asyms_U[i] = np.load(root+processedfolder+folders_start+'/asym_U/'+runslist_U[i])\n",
+    "#     run_asyms_U_noLi[i] = run_asyms_U[i,:-1].copy()\n",
     "    run_asyms_All[i] = np.vstack((run_asyms_U_noLi[i], run_asyms_D[i]))\n",
     "    \n",
     "print(len(run_asyms_U_noLi))\n",
@@ -350,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2f993263",
    "metadata": {},
    "outputs": [],
@@ -364,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "55c7e817",
    "metadata": {},
    "outputs": [
@@ -376,7 +384,8 @@
       "330\n",
       "330\n",
       "25\n",
-      "8992\n"
+      "13\n",
+      "9000\n"
      ]
     }
    ],
@@ -386,15 +395,16 @@
     "print(len(run_asyms_All))\n",
     "print(len(run_asyms_All[200]))\n",
     "\n",
-    "xs_cut = np.load(root+processedfolder+'_temp_xs.npy')\n",
+    "# xs_cut = np.load(root+processedfolder+'_temp_xs.npy')\n",
+    "xs_uncut = np.load(root+processedfolder+'xs_uncut.npy')\n",
     "\n",
-    "print(len(xs_cut))\n",
-    "# print(len(xs_cut[0]))"
+    "print(len(xs_uncut))\n",
+    "print(len(xs_uncut[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a0cab2b3",
    "metadata": {},
    "outputs": [
@@ -402,10 +412,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8992\n",
+      "9000\n",
       "\n",
       "24\n",
-      "8992\n"
+      "9000\n"
      ]
     }
    ],
@@ -448,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "41a4e509",
    "metadata": {},
    "outputs": [
@@ -457,14 +467,12 @@
      "output_type": "stream",
      "text": [
       "330\n",
-      "[-0.00013412 -0.00013525 -0.00013461 -0.00013468 -0.00013504 -0.00013425\n",
-      " -0.00013517 -0.00013475 -0.00013468 -0.00013468]\n",
-      "[-0.00013412 -0.00013525 -0.00013461 -0.00013468 -0.00013504 -0.00013425\n",
-      " -0.00013517 -0.00013475 -0.00013468 -0.00013468]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       "330\n",
       "0\n",
-      "0.1230410546092263\n",
-      "0.1230410546092262\n"
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
@@ -511,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "af07a54e",
    "metadata": {},
    "outputs": [],
@@ -519,12 +527,12 @@
     "# legend = []\n",
     "%matplotlib qt\n",
     "\n",
-    "plt.plot(xs_cut, NaI_asyms[20] , label='NaI D1')\n",
+    "# plt.plot(xs_uncut[0], NaI_asyms[16] , label='NaI D1')\n",
     "# plt.plot(xs_cut, ch_asyms[2] , label='NaI D1')\n",
-    "# plt.plot(xs_cut, All_NaI_asyms/24, label='All NaI')\n",
+    "# plt.plot(xs_uncut[0], All_NaI_asyms/24, label='All NaI')\n",
     "# plt.plot(d, b/24, label='All NaI')\n",
     "\n",
-    "# plt.plot(xs_cut, All_Li6_asyms , label='6Li')\n",
+    "plt.plot(xs_uncut[0], All_Li6_asyms , label='6Li')\n",
     "# plt.plot(xs_cut, All_Li6_asyms/4275 , label='6Li')\n",
     "# plt.plot(d, b, label='6Li')\n",
     "\n",
@@ -533,8 +541,9 @@
     "plt.xlabel(\"time from trigger (ns)\")\n",
     "plt.ylabel(\"ADC\")\n",
     "\n",
-    "plt.ylim(-3,3)\n",
-    "plt.xlim(xs_cut[1800],xs_cut[-1])\n",
+    "plt.ylim(-10,10)\n",
+    "# plt.xlim(xs_cut[1800],xs_cut[-1])\n",
+    "plt.xlim(xs_uncut[0][1800],xs_uncut[0][-1])\n",
     "\n",
     "# plt.axvline(xs[0][baseL], ls = '--')\n",
     "# plt.axvline(xs[0][baseR], ls = '--')\n",
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "6caa392f",
    "metadata": {},
    "outputs": [
@@ -576,7 +585,7 @@
      "output_type": "stream",
      "text": [
       "13\n",
-      "8992\n"
+      "9000\n"
      ]
     }
    ],
@@ -605,7 +614,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
+   "id": "6cd24eed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 6 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "testa = np.array([1,4,10])\n",
+    "testb = np.array([6,2,-1])\n",
+    "tests = [testa, testb]\n",
+    "\n",
+    "print(np.sum(tests, axis =0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "eb1488d4",
    "metadata": {},
    "outputs": [
@@ -613,18 +644,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "13\n",
+      "9000\n"
      ]
     }
    ],
    "source": [
     "alltests = np.sum(testloads, axis =0)\n",
-    "print(len(alltests))"
+    "print(len(alltests))\n",
+    "print(len(alltests[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "5bd1bd68",
    "metadata": {},
    "outputs": [],
@@ -632,8 +665,8 @@
     "# legend = []\n",
     "%matplotlib qt\n",
     "\n",
-    "plt.plot(xs_cut, alltests[0] , label='alltests')\n",
-    "plt.plot(xs_cut, testload1[1] , label='testload1')\n",
+    "plt.plot(xs_uncut[0], alltests[0] , label='alltests')\n",
+    "plt.plot(xs_uncut[0], testload1[1] , label='testload1')\n",
     "# plt.plot(xs_cut, NaI_asyms[0] , label='NaI D1')\n",
     "# plt.plot(xs_cut, NaI_asyms[5] , label='NaI D1')\n",
     "# plt.plot(xs_cut, NaI_asyms[19] , label='NaI D1')\n",
@@ -653,7 +686,8 @@
     "plt.ylabel(\"ADC\")\n",
     "\n",
     "plt.ylim(-3,3)\n",
-    "plt.xlim(xs_cut[1800],xs_cut[-1])\n",
+    "# plt.xlim(xs_cut[1800],xs_cut[-1])\n",
+    "plt.xlim(xs_uncut[0][1800],xs_uncut[0][-1])\n",
     "\n",
     "# plt.axvline(xs[0][baseL], ls = '--')\n",
     "# plt.axvline(xs[0][baseR], ls = '--')\n",
