--- a/07.18.24_final_asym_test2.ipynb
+++ b/07.18.24_final_asym_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "fdf4de45",
    "metadata": {},
    "outputs": [
@@ -51,8 +51,8 @@
     "print(end_i)\n",
     "print(len(search_arr[start_i:end_i+1]))\n",
     "\n",
-    "firstfile = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D_not0/'))[0]\n",
-    "arr_sizer = np.load(root+processedfolder+folders_start+'/asym_D_not0/'+firstfile)\n",
+    "firstfile = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D/'))[0]\n",
+    "arr_sizer = np.load(root+processedfolder+folders_start+'/asym_D/'+firstfile)\n",
     "# print(arr_sizer)\n",
     "print(len(arr_sizer))\n",
     "print(len(arr_sizer[0]))\n",
@@ -63,8 +63,8 @@
     "#     runslist_D[f] = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D'))\n",
     "#     runslist_U[f] = sorted(os.listdir(root+processedfolder+folders_start+'/asym_U'))\n",
     "\n",
-    "runslist_D = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D_not0')) ## has to be changed to an array\n",
-    "runslist_U = sorted(os.listdir(root+processedfolder+folders_start+'/asym_U_not0'))\n",
+    "runslist_D = sorted(os.listdir(root+processedfolder+folders_start+'/asym_D')) ## has to be changed to an array\n",
+    "runslist_U = sorted(os.listdir(root+processedfolder+folders_start+'/asym_U'))\n",
     "\n",
     "numruns = len(runslist_U) ## this also has to be changed to an array\n",
     "print(numruns)\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "817cb992",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "64d27baa",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "c53b3873",
    "metadata": {},
    "outputs": [
@@ -140,19 +140,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F:\\LANL/processed_data/runs12034-12363/asym_D_not0/12034_asym_D.npy\n",
+      "F:\\LANL/processed_data/runs12034-12363/asym_D/12034_asym_D.npy\n",
       "13\n",
       "9000\n",
-      "[ 0.00133901 -0.01026569 -0.02456402  0.02256841  0.02206603 -0.02736907\n",
-      " -0.00754862  0.01507347  0.01083589 -0.0029482 ]\n",
-      "[ 0.00133901 -0.01026569 -0.02456402  0.02256841  0.02206603 -0.02736907\n",
-      " -0.00754862  0.01507347  0.01083589 -0.0029482 ]\n"
+      "[ 0.01319025  0.01208817 -0.09686754 -0.08243149 -0.03015019 -0.02732528\n",
+      "  0.00181406  0.00497356 -0.01576548  0.08892026]\n",
+      "[ 0.01319025  0.01208817 -0.09686754 -0.08243149 -0.03015019 -0.02732528\n",
+      "  0.00181406  0.00497356 -0.01576548  0.08892026]\n"
      ]
     }
    ],
    "source": [
-    "testload = np.load(root+processedfolder+folders_start+'/asym_D_not0/'+runslist_D[:][0])\n",
-    "print(root+processedfolder+folders_start+'/asym_D_not0/'+runslist_D[:][0])\n",
+    "testload = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][0])\n",
+    "print(root+processedfolder+folders_start+'/asym_D/'+runslist_D[:][0])\n",
     "# print(testload)\n",
     "# print(len(testload))\n",
     "# print(len(testload[-1]))\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "893d82da",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "35037682",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "4fcb8504",
    "metadata": {},
    "outputs": [
@@ -284,20 +284,20 @@
       "25\n",
       "330\n",
       "9000\n",
-      "[0. 0. 0. 0. 0.]\n",
-      "[0. 0. 0. 0. 0.]\n",
-      "[ 0.3597302  -1.52058834  0.71034006 -0.54548505 10.57092632]\n",
+      "[  0.59514165 -10.04167657   0.38725083  -1.8717632    0.85093834]\n",
+      "[  0.59514165 -10.04167657   0.38725083  -1.8717632    0.85093834]\n",
+      "[ 0.4126407  -0.52886686 -1.02323847  0.50463798  1.54159895]\n",
       "\n",
-      "[-0.01870986 -0.01122627 -0.01887308 -0.07985227  0.03048699]\n",
-      "[-0.01870986 -0.01122627 -0.01887308 -0.07985227  0.03048699]\n",
+      "[-0.00718763 -0.12879827  0.00043363  0.00638278 -0.05355348]\n",
+      "[-0.00718763 -0.12879827  0.00043363  0.00638278 -0.05355348]\n",
       "\n",
-      "[ 0.3597302  -1.52058834  0.71034006 -0.54548505 10.57092632]\n",
-      "[ 0.3597302  -1.52058834  0.71034006 -0.54548505 10.57092632]\n",
-      "[0. 0. 0. 0. 0.]\n",
-      "[0. 0. 0. 0. 0.]\n",
+      "[ 0.4126407  -0.52886686 -1.02323847  0.50463798  1.54159895]\n",
+      "[ 0.4126407  -0.52886686 -1.02323847  0.50463798  1.54159895]\n",
+      "[ 0.40206059 -1.30000397  1.62067418  3.03920603 -0.89300974]\n",
+      "[ 0.40206059 -1.30000397  1.62067418  3.03920603 -0.89300974]\n",
       "\n",
-      "[-0.01870986 -0.01122627 -0.01887308 -0.07985227  0.03048699]\n",
-      "[ 0.11629252  0.27229289  0.31511935 -0.43666285  0.19295632]\n"
+      "[-0.00718763 -0.12879827  0.00043363  0.00638278 -0.05355348]\n",
+      "[ 0.15280615 -0.3130729  -0.4146611  -0.99250242 -0.18684613]\n"
      ]
     }
    ],
@@ -312,8 +312,8 @@
     "\n",
     "for i in range(numruns):\n",
     "    run_asyms_D[i] = np.load(root+processedfolder+folders_start+'/asym_D/'+runslist_D[i])\n",
-    "#     run_asyms_U[i] = np.load(root+processedfolder+folders_start+'/asym_U/'+runslist_U[i])\n",
-    "#     run_asyms_U_noLi[i] = run_asyms_U[i,:-1].copy()\n",
+    "    run_asyms_U[i] = np.load(root+processedfolder+folders_start+'/asym_U/'+runslist_U[i])\n",
+    "    run_asyms_U_noLi[i] = run_asyms_U[i,:-1].copy()\n",
     "    run_asyms_All[i] = np.vstack((run_asyms_U_noLi[i], run_asyms_D[i]))\n",
     "    \n",
     "print(len(run_asyms_U_noLi))\n",
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "55c7e817",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "a0cab2b3",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "41a4e509",
    "metadata": {},
    "outputs": [
@@ -467,12 +467,14 @@
      "output_type": "stream",
      "text": [
       "330\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[-0.01234824 -0.01234687 -0.01234604 -0.01234677 -0.01234892 -0.01234787\n",
+      " -0.01234611 -0.01234689 -0.01234721 -0.01234691]\n",
+      "[-0.01234824 -0.01234687 -0.01234604 -0.01234677 -0.01234892 -0.01234787\n",
+      " -0.01234611 -0.01234689 -0.01234721 -0.01234691]\n",
       "330\n",
       "0\n",
-      "0.0\n",
-      "0.0\n"
+      "-3.6767592828925912\n",
+      "-3.676759282892592\n"
      ]
     }
    ],
@@ -519,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "af07a54e",
    "metadata": {},
    "outputs": [],
@@ -527,12 +529,12 @@
     "# legend = []\n",
     "%matplotlib qt\n",
     "\n",
-    "# plt.plot(xs_uncut[0], NaI_asyms[16] , label='NaI D1')\n",
+    "plt.plot(xs_uncut[0], NaI_asyms[16] , label='NaI D1')\n",
     "# plt.plot(xs_cut, ch_asyms[2] , label='NaI D1')\n",
     "# plt.plot(xs_uncut[0], All_NaI_asyms/24, label='All NaI')\n",
     "# plt.plot(d, b/24, label='All NaI')\n",
     "\n",
-    "plt.plot(xs_uncut[0], All_Li6_asyms , label='6Li')\n",
+    "# plt.plot(xs_uncut[0], All_Li6_asyms , label='6Li')\n",
     "# plt.plot(xs_cut, All_Li6_asyms/4275 , label='6Li')\n",
     "# plt.plot(d, b, label='6Li')\n",
     "\n",
@@ -558,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "b03cf3c4",
    "metadata": {},
    "outputs": [
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "6caa392f",
    "metadata": {},
    "outputs": [
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "6cd24eed",
    "metadata": {},
    "outputs": [
@@ -636,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "eb1488d4",
    "metadata": {},
    "outputs": [
@@ -657,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "5bd1bd68",
    "metadata": {},
    "outputs": [],
