adding various gamma counting files. New file trying to separate t0 aligning from the asymmetry (currently named D11)

--- a/gammacount_D_v2_debug.ipynb
+++ b/gammacount_D_v2_debug.ipynb
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataread from binary time: 2.7873833179473877\n"
+      "dataread from binary time: 2.4951882362365723\n"
      ]
     }
    ],
@@ -373,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "plotting and/or base subtraction time: 5.823296785354614\n"
+      "plotting and/or base subtraction time: 12.906165599822998\n"
      ]
     }
    ],
@@ -475,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aligning and cutting time: 14.14651870727539\n"
+      "aligning and cutting time: 14.385793924331665\n"
      ]
     }
    ],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
       "channel 9\n",
       "channel 10\n",
       "channel 11\n",
-      "18.58534336090088\n"
+      "18.377466201782227\n"
      ]
     }
    ],
@@ -807,11 +807,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'peaks_beg_np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3416\\3557431072.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#     print(jit_ints_beg[i][300][20:30])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpks_beg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mpeaks_beg_np\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'peaks_beg_np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# print((pks_beg[0][p][-10:]))\n",
@@ -839,49 +851,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "5000\n",
-      "72\n",
-      "12\n",
-      "5000\n",
-      "72\n",
-      "[1196 1203 1253 1278 1309 1321 1338 1351 1382 1398]\n",
-      "[1196 1203 1253 1278 1309 1321 1338 1351 1382 1398]\n",
-      "[ 13  15  91 113 192 199 206 211 219 229]\n",
-      "[ 13  15  91 113 192 199 206 211 219 229]\n",
-      "\n",
-      "[8836 8860 8862 8887 8909 8930 8940 8972 8987 8990]\n",
-      "[8836 8860 8862 8887 8909 8930 8940 8972 8987 8990]\n",
-      "[7596 7609 7611 7625 7629 7649 7665 7673 7677 7690]\n",
-      "[7596 7609 7611 7625 7629 7649 7665 7673 7677 7690]\n",
-      "\n",
-      "12\n",
-      "5000\n",
-      "124\n",
-      "12\n",
-      "5000\n",
-      "124\n",
-      "[8836 8860 8862 8887 8909 8930 8940 8972 8987]\n",
-      "[[8834 8838]\n",
-      " [8858 8862]\n",
-      " [8860 8864]\n",
-      " [8885 8889]\n",
-      " [8907 8911]\n",
-      " [8928 8932]\n",
-      " [8938 8942]\n",
-      " [8970 8974]\n",
-      " [8985 8989]]\n",
-      "[8836 8860 8862 8887 8909 8930 8940 8972 8987]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = 1586\n",
     "\n",
@@ -922,29 +894,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel 0\n",
-      "channel 1\n",
-      "channel 2\n",
-      "channel 3\n",
-      "channel 4\n",
-      "channel 5\n",
-      "channel 6\n",
-      "channel 7\n",
-      "channel 8\n",
-      "channel 9\n",
-      "channel 10\n",
-      "channel 11\n",
-      "74.56168341636658\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# now try numpy version\n",
     "\n",
@@ -1018,49 +970,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gabeo\\anaconda3\\lib\\site-packages\\numba\\core\\ir_utils.py:2152: NumbaPendingDeprecationWarning: \u001b[1m\n",
-      "Encountered the use of a type that is scheduled for deprecation: type 'reflected list' found for argument 'int_ranges' of function 'integrate_peaks_jit'.\n",
-      "\n",
-      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-reflection-for-list-and-set-types\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\gabeo\\AppData\\Local\\Temp\\ipykernel_2428\\880548902.py\", line 2:\u001b[0m\n",
-      "\u001b[1m@njit\n",
-      "\u001b[1mdef integrate_peaks_jit(ys, int_ranges): ## ranges in which to integrate int_ranges = [[2,6], [6,10]], 2 len array for each point\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(NumbaPendingDeprecationWarning(msg, loc=loc))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel 1\n",
-      "channel 2\n",
-      "channel 3\n",
-      "channel 4\n",
-      "channel 5\n",
-      "channel 6\n",
-      "channel 7\n",
-      "channel 8\n",
-      "channel 9\n",
-      "channel 10\n",
-      "channel 11\n",
-      "2.547611951828003\n"
+     "ename": "NameError",
+     "evalue": "name 'sum_ranges_beg_np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15812\\880548902.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mints_end_jit\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0msum_ranges_beg_np\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_ranges_beg_np\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[0msum_ranges_end_np\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_ranges_end_np\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sum_ranges_beg_np' is not defined"
      ]
     }
    ],
@@ -1141,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1081,7 @@
       "\n",
       "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-reflection-for-list-and-set-types\n",
       "\u001b[1m\n",
-      "File \"C:\\Users\\gabeo\\AppData\\Local\\Temp\\ipykernel_33340\\2040983952.py\", line 2:\u001b[0m\n",
+      "File \"C:\\Users\\gabeo\\AppData\\Local\\Temp\\ipykernel_15812\\2040983952.py\", line 2:\u001b[0m\n",
       "\u001b[1m@njit\n",
       "\u001b[1mdef integrate_peaks_jit_2(ys, peaks): ## ranges in which to integrate int_ranges = [[2,6], [6,10]], 2 len array for each point\n",
       "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
@@ -1183,7 +1104,7 @@
       "channel 9\n",
       "channel 10\n",
       "channel 11\n",
-      "2.6086537837982178\n"
+      "2.4004437923431396\n"
      ]
     }
    ],
@@ -1231,6 +1152,41 @@
     "    \n",
     "# end = time.time()\n",
     "# print(end-start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  2.86785714  23.86785714  25.86785714  27.86785714 111.86785714\n",
+      "  56.86785714  33.86785714  -6.13214286  29.86785714  -1.13214286]\n",
+      "[124.86785714  97.86785714  52.86785714  19.86785714  26.86785714\n",
+      "  34.86785714  29.86785714  38.86785714  42.86785714  49.86785714]\n",
+      "\n",
+      "[ 49.86785714 553.86785714 566.86785714  58.86785714 146.86785714\n",
+      "  40.86785714  48.86785714 183.86785714  48.86785714  40.93      ]\n",
+      "[ 15.86785714 129.86785714 141.86785714 141.86785714 150.86785714\n",
+      " 178.86785714  42.86785714  19.86785714  20.86785714 114.86785714]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 1586\n",
+    "\n",
+    "print((ints_beg_jit_2[0][p][-10:]))\n",
+    "# print((sum_ranges_beg_np[0][p][-10:]))\n",
+    "print((ints_beg_jit_2[0][p][:10]))\n",
+    "# print((sum_ranges_beg_np[0][p][-10:]))\n",
+    "print()\n",
+    "print((ints_end_jit_2[0][p][-10:]))\n",
+    "# print((sum_ranges_beg_np[0][p][-10:]))\n",
+    "print((ints_end_jit_2[0][p][:10]))\n",
+    "# print((sum_ranges_beg_np[0][p][-10:]))\n"
    ]
   },
   {
@@ -1310,14 +1266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.92171311378479\n"
+      "4.618896722793579\n"
      ]
     }
    ],
@@ -1377,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
